# kwin-effects-yet-another-magic-lamp

./: CMakeLists.txt
src/: CMakeLists.txt  Model.cc  Model.h  YetAnotherMagicLampEffect.cc  YetAnotherMagicLampEffect.h  main.cpp  metadata.json  options.kcfg
src/kcm/: CMakeLists.txt  YetAnotherMagicLampEffectKCM.cc  YetAnotherMagicLampEffectKCM.h  metadata.json
